--- a/web/NEWS
+++ b/web/NEWS
@@ -2,9 +2,9 @@
 
 Ce programme est en version beta. Il est fourni sans aucune garantie.
 <br><br>
-* Le syst&egrave;me ne tient pas encore compte du fait que certains groupes peuvent &ecirc;tre pleins<br>
 * Le seul type d'optimisation impl&eacute;ment&eacute; est la minimisation
 des trous<br>
-* Les cours qui sont a des heures non-standard (17:45 par exemple) ne sont pas affich&eacute;s
+* Les cours qui sont &agrave; des heures non standard (17:45 par exemple) ne sont pas affich&eacute;s<br>
+* Certaines combinaisons de cours (ceux du tronc commun surtout) engendrent un tr&egrave;s grand nombre de possibilit&eacute;s d'horaires; le t&eacute;l&eacute;chargement peut &egrave;tre long.
 <br><br>
 Pour des informations, contactez <a href="mailto:pierre-marc.fournier@polymtl.ca">Pierre-Marc Fournier</a>
