add group constraints

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+sopti-0.12 (2005//)
+* ajout des contraintes de groupe
+
 sopti-0.11 (2005/01/06)
 * corrections et améliorations esthétiques
 * ajouts au fichier ChangeLog, récemment négligé
