*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 sopti-0.13 ()
 * patch de commentaires (Benjamin Poirier)
 * colonnes de periodes libres cliquables dans make_form2 (Benjamin Poirier)
+* nettoyage (Benjamin Poirier)
+* mises a jour documentation
 
 sopti-0.12 (2005/05/23)
 * ajout des contraintes de groupe
