--- a/sopti/AUTHORS
+++ b/sopti/AUTHORS
@@ -8,5 +8,5 @@ et en a fait une première implémentation.
 publicisation du projet. De plus, en tant qu'administrateur du STEP et du réseau
 de l'AEP, il a fourni un excellent environnement d'exécution au programme.
 
-* Benjamin Poirier a fait de la documentation de code, du nettoyage, et a
-apporté des améliorations à plusieurs sections.
+* Benjamin Poirier a fait de la documentation de code, un diagramme UML, du
+nettoyage, et a apporté des améliorations à plusieurs sections.
