--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-sopti-0.14 ()
+sopti-0.14 (2005/07/24)
 * remplacement de la base de données CSV par une base de données MySQL
 * utilitaire de mise à jour de base de données
 * nettoyage
@@ -10,6 +10,7 @@ sopti-0.14 ()
 * ajouter un fichier de config
 * meilleure gestion des erreurs dans make_form2.php, buffered output
 * mise a jour documentation
+* nettoyage config.php
 
 sopti-0.13 (2005/06/30)
 * patch de commentaires (Benjamin Poirier)
