--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
-php: add error handler for mysql execution errors and warnings
+integrer le nouveau design web pour index.php
+conversion a xhtml strict
+changer l'exemple de make_form1
+tester les erreurs mysql davantage
 add weekend support
 colorize results
-merge ben's stuff
 alterner les teintes de gris pour les heures
-unsubscribe notification: invalid email: mail quand meme?
-pourquoi etape 0 dans unsubscribe
-avoir ouvrir toutes et fermer toutes pour toutes dans le open_close_form
