*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-sopti-0.16 (2005/09/)
+sopti-0.16 (2005/09/03)
 * correction d'un bug lorsqu'il y a plusieurs sessions dans la DB
 * améliorations au site web
 
