--- a/sopti/AUTHORS
+++ b/sopti/AUTHORS
@@ -1,12 +1,13 @@
 * Pierre-Marc Fournier a démarré le projet à l'automne 2004, et il dirige
 présentement le projet.
 
-* Marc-André Lalonde a eu l'idée d'un objectif maximisant les heures de sommeil
-et en a fait une première implémentation.
+* Benjamin Poirier a conçu le module de notification par email, fait de la 
+documentation de code, un diagramme UML, du nettoyage, et a apporté des 
+améliorations à plusieurs sections.
 
 * Jean-François Lévesque, en tant que VP aux services de l'AEP a assuré la
 publicisation du projet. De plus, en tant qu'administrateur du STEP et du réseau
 de l'AEP, il a fourni un excellent environnement d'exécution au programme.
 
-* Benjamin Poirier a fait de la documentation de code, un diagramme UML, du
-nettoyage, et a apporté des améliorations à plusieurs sections.
+* Marc-André Lalonde a eu l'idée d'un objectif maximisant les heures de sommeil
+et en a fait une première implémentation.
