--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ sopti-0.17
 * changement logos AEP pour logos du générateur
 * ajout de Makefile.svn
 * mises à jour AUTHORS
+* mises à jour INSTALL
 
 sopti-0.16 (2005/09/03)
 * correction d'un bug lorsqu'il y a plusieurs sessions dans la DB
