--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ sopti-0.17
 * ajout de Makefile.svn
 * mises à jour AUTHORS
 * mises à jour INSTALL
+* mises à jour README
 
 sopti-0.16 (2005/09/03)
 * correction d'un bug lorsqu'il y a plusieurs sessions dans la DB
