--- a/sopti/ChangeLog
+++ b/sopti/ChangeLog
@@ -1,4 +1,4 @@
-sopti-0.17
+sopti-0.17 (2005/12/06)
 * changement logos AEP pour logos du générateur
 * ajout de Makefile.svn
 * mises à jour AUTHORS
