--- a/sopti/INSTALL
+++ b/sopti/INSTALL
@@ -5,9 +5,10 @@ Requirements:
 	- libxml2
 	- perl
 	- php
-	- String::Escape perl module
+	- String::Escape and Unicode::String perl modules
 	- python (>=2.3?)
 	- python mysqldb module
+	- libmysqlclient (serait-il possible de tester ces choses avec autoconf?)
 
 * Unpack the archive in a directory of your choice
 	tar xvzf sopti-xx.tar.gz
@@ -22,6 +23,32 @@ Requirements:
 	
 -> No install feature is implemented at this time
 
+
+INSTALLING THE MAIN PROGRAM
+----------------------------
+* Create sopti.conf in the same directory as the sopti executable, based
+  on sopti.conf.example.
+
+* Create the database with the db/empty.sql script
+	mysql -h myhost -u myuser -p my_database < db/empty.sql
+
+* Download course data
+	cd data
+	./update_smb
+	cd ..
+
+* (Optional) Import teacher data from XML files on polymtl.ca
+	./update_courses_xml.sh 
+  Then create teachers.csv
+	./make_teachers_csv.sh
+
+* Populate the SQL database
+	cd db
+	./updatedb.pl
+
+* (Optional) Install cron jobs to run the two previous steps periodically
+
+
 INSTALLING THE WEB INTERFACE
 ----------------------------
 * Copy all the contents of the web/ directory to a directory accessible
@@ -30,34 +57,13 @@ INSTALLING THE WEB INTERFACE
 * Create config.php based on config.php.example and put it in the public
   directory.
 
-* Create sopti.conf in the same directory as the sopti executable, based
-  on sopti.conf.example.
-
-* Create the database with the db/empty.sql script
-	mysql -h myhost -u myuser -p my_database < db/empty.sql
-
-* (Optional) Import teacher data from XML files on polymtl.ca
-	./update_courses_xml.sh 
-  Then create teachers.csv
-	./make_teachers_csv.sh
-
-* Download data and populate the SQL database
-	cd data
-	./update_smb
-
-	cd ../db
-	./updatedb.pl
-
-* Install cron jobs to run the two previous steps periodically
-
 
 INSTALLING & USING THE EMAILER
 ------------------------------
-* Make sure you have installed the database in the previous section
+* Make sure you have installed the database in the first section
 
 * In the folder "emailer/", create emailer.conf based on emailer.conf.example 
 	or edit configuration.py
 
-* Run emailer.py regularly for example when the database is updated 
-	or in a cron job
+* Run emailer.py when the database is updated to send the emails
 
