--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+sopti-0.18 ()
+* changer les exemples de cours dans make_form1.php
+* automatiser l'affichage des sessions sur index.php
+
 sopti-0.17 (2005/12/06)
 * changement logos AEP pour logos du générateur
 * ajout de Makefile.svn
