--- a/sopti/TODO
+++ b/sopti/TODO
@@ -7,3 +7,6 @@ colorize results
 alterner les teintes de gris pour les heures
 
 print error in make.php if sopti executable not exists
+
+enlever les dontaddasis si inutiles
+faire interface d'administration
