Some clean-up and UTF-8 conversion.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,13 @@
-* Pierre-Marc Fournier a démarré le projet à l'automne 2004, et il dirige
-présentement le projet.
+* Pierre-Marc Fournier a dÃ©marrÃ© le projet Ã  l'automne 2004, et il dirige
+prÃ©sentement le projet.
 
-* Benjamin Poirier a conçu le module de notification par email, fait de la 
-documentation de code, un diagramme UML, du nettoyage, et a apporté des 
-améliorations à plusieurs sections.
+* Benjamin Poirier a conÃ§u le module de notification par email, fait de la 
+documentation de code, un diagramme UML, du nettoyage, et a apportÃ© des 
+amÃ©liorations Ã  plusieurs sections.
 
-* Jean-François Lévesque, en tant que VP aux services de l'AEP a assuré la
-publicisation du projet. De plus, en tant qu'administrateur du STEP et du réseau
-de l'AEP, il a fourni un excellent environnement d'exécution au programme.
+* Jean-FranÃ§ois LÃ©vesque, en tant que VP aux services de l'AEP a assurÃ© la
+publicisation du projet. De plus, en tant qu'administrateur du STEP et du rÃ©seau
+de l'AEP, il a fourni un excellent environnement d'exÃ©cution au programme.
 
-* Marc-André Lalonde a eu l'idée d'un objectif maximisant les heures de sommeil
-et en a fait une première implémentation.
+* Marc-AndrÃ© Lalonde a eu l'idÃ©e d'un objectif maximisant les heures de sommeil
+et en a fait une premiÃ¨re implÃ©mentation.
