--- a/TODO
+++ b/TODO
@@ -7,6 +7,6 @@ alterner les teintes de gris pour les heures
 print error in make.php if sopti executable not exists
 faire interface d'administration
 suite de tests
-complétion automatique des noms de cours
+complÃ©tion automatique des noms de cours
 enlever les conflits avec les cours pfe
 faire interface d'administration
