--- a/README
+++ b/README
@@ -1,30 +1,30 @@
 sopti
 -----
-Dernière mise à jour: 2005/10/15
+DerniÃ¨re mise Ã  jour: 2005/10/15
 
-Sopti est un générateur d'horaires scolaires optimisés. Pour le moment, il est
-conçu expressément pour les horaires étudiants de l'École Polytechnique de
-Montréal. Il est installé sous le nom de Générateur d'Horaires de
-l'Association des Étudiants de Polytechnique à l'adresse:
+Sopti est un gÃ©nÃ©rateur d'horaires scolaires optimisÃ©s. Pour le moment, il est
+conÃ§u expressÃ©ment pour les horaires Ã©tudiants de l'Ã‰cole Polytechnique de
+MontrÃ©al. Il est installÃ© sous le nom de GÃ©nÃ©rateur d'Horaires de
+l'Association des Ã‰tudiants de Polytechnique Ã  l'adresse:
 http://horaires.aep.polymtl.ca/
 
-La procédure d'installation se trouve dans le fichier INSTALL.
+La procÃ©dure d'installation se trouve dans le fichier INSTALL.
 
 Ce package contient:
-  - L'engin de génération d'horaires (exécutable sopti)
+  - L'engin de gÃ©nÃ©ration d'horaires (exÃ©cutable sopti)
   - Un site web php comme interface pour l'engin
-  - Des outils pour télécharger la données d'horaires de Poly
+  - Des outils pour tÃ©lÃ©charger la donnÃ©es d'horaires de Poly
   - Un module de notification d'utilisateur par email lorsque
-    des places deviennent disponibles dans un groupe (intégré
-    à l'interface php)
+    des places deviennent disponibles dans un groupe (intÃ©grÃ©
+    Ã  l'interface php)
 
-Parmi les fonctionnalités du système, on compte:
-    * Possibilité de synchroniser avec les données du Bureau des Affaires
-      Académiques mises à jour aux 16 minutes
-    * La compatibilité avec les cours du bacc, cycles supérieurs, et
+Parmi les fonctionnalitÃ©s du systÃ¨me, on compte:
+    * PossibilitÃ© de synchroniser avec les donnÃ©es du Bureau des Affaires
+      AcadÃ©miques mises Ã  jour aux 16 minutes
+    * La compatibilitÃ© avec les cours du bacc, cycles supÃ©rieurs, et
       certificats
     * Les cours de jour, de soir et de fin de semaine
     * Avertissements par courriel lorsque des places deviennent disponibles
-      dans les sections qui vous intéressent
-    * La possibilité de générer des horaires avec conflits
+      dans les sections qui vous intÃ©ressent
+    * La possibilitÃ© de gÃ©nÃ©rer des horaires avec conflits
 
